kubernetes/home/media/servarr/app/cleanuparr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanuparr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cleanuparr
  template:
    metadata:
      labels:
        app: cleanuparr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: cleanuparr
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
          image: ghcr.io/cleanuparr/cleanuparr:2.10.8
          ports:
            - containerPort: 11011
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cleanuparr-config
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: cleanuparr
  namespace: media
spec:
  selector:
    app: cleanuparr
  ports:
    - port: 11011
      targetPort: 11011
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanuparr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Cleanuparr
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: cleanuparr
    gethomepage.dev/weight: 15
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: cleanuparr.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  tls:
    - secretName: cleanuparr.saturn.ci
      hosts:
        - cleanuparr.saturn.ci
  rules:
    - host: "cleanuparr.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: cleanuparr
                port:
                  number: 11011
